--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,18 @@
 	"display":"standalone",
 	"theme_color":"black",
 	"scope": ".",
-  "icons": [{
-    "src": "icon.png",
-    "type": "image/png",
-    "sizes": "192x192"
-  }],
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
   "screenshots": [
     {
       "src": "./rock-paper-scissors.png",
