ci(sonarcloud): add config and job

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,5 +23,5 @@ sonar.links.issue=https://github.com/proustibat/rock-paper-scissor-vanilla-js/is
 #   Properties that will be shared amongst all modules
 # =====================================================
 sonar.host.url=https://sonarcloud.io
-sonar.sources=src
-sonar.coverage.exclusions=src/**/*
+sonar.sources=.
+#sonar.coverage.exclusions=src/**/*
