--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,7 @@ sonar.projectKey=proustibat_rock-paper-scissor-vanilla-js
 sonar.organization=proustibat
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=SVG Loader ES6 - Example
-#sonar.projectVersion=1.0
+sonar.projectName=Rock Paper Scssors - vanilla js
 
 # =====================================================
 #   Meta-data for the project
@@ -12,12 +11,6 @@ sonar.links.homepage=https://github.com/proustibat/rock-paper-scissor-vanilla-js
 sonar.links.ci=https://travis-ci.org/proustibat/rock-paper-scissor-vanilla-js
 sonar.links.scm=https://github.com/proustibat/rock-paper-scissor-vanilla-js
 sonar.links.issue=https://github.com/proustibat/rock-paper-scissor-vanilla-js/issues
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
 
 # =====================================================
 #   Properties that will be shared amongst all modules
